--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,14 @@ h1 {
     font-family: serif;
 }
 
-p {
-    font-size: 25px;
-    color:white;
+h3 {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
 }
 
-li {
+p {
+    font-size: 25px;
     color: white;
 }
 
@@ -20,8 +22,9 @@ body {
 }
 
 li {
+    color: white;
     font-size: 30px;
-    font-family: lumari;
+    font-family: sans-serif;
     list-style: none;
 }
 
@@ -30,5 +33,32 @@ img {
 }
 
 a {
+    padding: 3px;
     text-decoration: none;
+    border: 2px solid rebeccapurple;
+    border-radius: 10%;
+}
+
+span {
+    font-style: oblique;
+}
+
+.classes_t {
+    color: white;
+    font-size: 30px;
+    font-family: lumari;
+    list-style: none;
+}
+
+#start {
+    color: royalblue;
+    font-family: fantasy;
+}
+
+.classe {
+    border: 3px solid red;
+    width: 700px;
+    height: 650px;
+    margin-left: auto;
+    margin-right: auto;
 }
