--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 h1 {
+    font-size: 32px;
+    color: orangered;
+    font-family: serif;
+}
+
+#h1g {
     color: orangered;
     font-family: serif;
 }
@@ -21,11 +27,12 @@ body {
     margin: auto;
 }
 
-li {
+ul {
     color: white;
     font-size: 30px;
     font-family: sans-serif;
     list-style: none;
+    padding: 0%;
 }
 
 img {
@@ -92,4 +99,46 @@ span {
     background-color: black;
     color: white;
     transform: scale(1.2)
+}
+
+.Bosses {
+    border: 3px solid red;
+    width: 700px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.boss {
+    height: auto;
+}
+
+footer {
+    bottom: 0;
+    padding: 0;
+    height: 200px;
+    width: 1864px;
+    margin-top: 0px;
+    background: url('../img/elmo.gif');
+    background-repeat: no-repeat;
+    background-size: 1875px 200px;
+    background-position-x: center;
+}
+
+#index {
+    bottom: 0;
+    padding: 0;
+    height: 200px;
+    width: 1864px;
+    margin-top: 420px;
+    background: url('../img/elmo.gif');
+    background-repeat: no-repeat;
+    background-size: 1875px 200px;
+    background-position-x: center;
+
+}
+
+nav {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
