--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ footer {
     bottom: 0;
     padding: 0;
     height: 200px;
-    width: 1864px;
+    width: 100vw;
     margin-top: 0px;
     background: url('../img/elmo.gif');
     background-repeat: no-repeat;
@@ -128,8 +128,8 @@ footer {
     bottom: 0;
     padding: 0;
     height: 200px;
-    width: 1864px;
-    margin-top: 420px;
+    width: 100vw;
+    position: absolute;
     background: url('../img/elmo.gif');
     background-repeat: no-repeat;
     background-size: 1875px 200px;
